added enable preview to pom.xml